--- a/shixon.html
+++ b/shixon.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <h1>hello world</h1>
+    <ul>
+        <li>home</li>
+        <li>about us</li>
+        <li>contact us</li>
+    </ul>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis doloremque velit expedita nemo omnis rem excepturi incidunt, reprehenderit tempore ipsum recusandae aut veritatis natus corrupti ullam veniam molestiae? Saepe, non nihil impedit delectus iste exercitationem error! Maiores architecto autem repellendus doloremque excepturi cum asperiores quia possimus, eveniet sunt earum aliquam expedita voluptas. Impedit ab ipsa provident quibusdam a voluptatum corrupti, aut, praesentium exercitationem dolorem enim non magnam neque adipisci voluptates ratione, libero dignissimos. Praesentium reiciendis laudantium iure sint ea in sapiente quasi ratione corrupti natus adipisci error qui enim vitae facere reprehenderit possimus distinctio magnam, non earum consequatur dolor ad.</p>
 </body>
 </html>
