--- a/shixon.html
+++ b/shixon.html
@@ -137,36 +137,36 @@
     
     <div class="container mt-3 mb-3 p-1">
         <div class="row zb">
-            <div class="col-12 col-lg-2 border shadow pt-2 zv">
+            <div class="col-12 col-lg-3 border shadow pt-2 zv">
                 <a href="#">
                     <i class="fa-solid fa-truck"></i>
                     <p>ارسال رایگان سفارش های بالا</p>
                 </a>
             </div>
-            <div class="col-12 col-lg-2 border shadow pt-2 ps-2 pe-2 zv">
+            <div class="col-12 col-lg-3 border shadow pt-2 ps-2 pe-2 zv">
                 <a href="#">
                     <i class="fa-solid fa-calendar-days"></i>
                     <p>ضمانت تعویض 10 روز سفارش</p>
                 </a>
             </div>
-            <div class="col-12 col-lg-2 border shadow pt-2 zv">
+            <div class="col-12 col-lg-3 border shadow pt-2 zv">
                 <a href="#">
                     <i class="fa-solid fa-gift"></i>
                     <p>مطابقت محصول با سایت</p>
                 </a>
             </div>
-            <div class="col-12 col-lg-2 border shadow pt-2 zv">
+            <div class="col-12 col-lg-3 border shadow pt-2 zv">
                 <a href="#">
                     <i class="fa-solid fa-bag-shopping"></i>
                     <p>کالای خود را بفروشید</p>
                 </a>
             </div>
-            <div class="col-12 col-lg-2 border shadow pt-2 zv">
+            <!-- <div class="col-12 col-lg-2 border shadow pt-2 zv">
                 <a href="#">
                     <i class="fa-solid fa-box"></i>
                     <p>بسته بندی مناسب و شیک</p>
                 </a>
-            </div>
+            </div> -->
         </div>
     </div>
     <div class="container">
