--- a/shixon.html
+++ b/shixon.html
@@ -193,29 +193,50 @@
             <div class="container mt-5">
                 <div class="row">
                     <div class="col-4">
-                        <img src="pic/shoes.jpg" alt="">
+                        <div class="box">
+                            <img src="pic/shoes.jpg" alt="">
+                            <div class="light"></div>
+                        </div>
                     </div>
                     <div class="col-4">
-                        <img src="pic/videoShoes.jpg" alt="">
+                        <div class="box">
+                            <img src="pic/videoShoes.jpg" alt="">
+                            <div class="light"></div>
+                        </div>
                     </div>
                     <div class="col-4">
-                        <img src="pic/_CampShix1301596521.jpg" alt="">
+                        <div class="box">
+                            <img src="pic/_CampShix1301596521.jpg" alt="">
+                            <div class="light"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="row mt-3">
                     <div class="col-4">
-                        <img src="pic/1401-10-07-14-09-58.jpg" alt="">
+                        <div class="box">
+                            <img src="pic/1401-10-07-14-09-58.jpg" alt="">
+                            <div class="light"></div>
+                        </div>
                     </div>
                     <div class="col-8">
-                        <img src="pic/1401-10-07-14-10-07.jpg" alt="">
+                        <div class="box">
+                            <img src="pic/1401-10-07-14-10-07.jpg" alt="">
+                            <div class="light"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="row mt-3">
                     <div class="col-8">
-                        <img src="pic/1401-10-07-14-10-07.jpg" alt="">
+                        <div class="box">
+                            <img src="pic/1401-10-07-14-10-07.jpg" alt="">
+                            <div class="light"></div>
+                        </div>
                     </div>
                     <div class="col-4">
-                        <img src="pic/1401-10-07-14-09-58.jpg" alt="">
+                        <div class="box">
+                            <img src="pic/1401-10-07-14-09-58.jpg" alt="">
+                            <div class="light"></div>
+                        </div>  
                     </div>
                 </div>
             </div>
