--- a/shixon.html
+++ b/shixon.html
@@ -13,36 +13,36 @@
 </head>
 <body>
     <div class="container-fluid z-3 position-absolute" style="background-color: #f8f9fa; width: 100%;">    
-                <div class="mhead">
-                    <!-- sell -->
-                    <div class="row">
-                        <div class="sell bnm"></div>
-                    </div>
-                    <!-- menu 1 -->
-                    <div class="border-bottom">
-                    <div class="container">
-                        <div class="row fvg">
-                            <div class="col-12">
-                                <ul class="">
-                                    <li class="border-start p-1"><a class="ps-2" href="#"><i class="fa-solid fa-house m-2"></i></a></li>
-                                    <li class="border-start p-1"><a class="ps-2" href="#"><i class="fa-solid fa-cart-shopping m-2"></i>سبد خرید</a></li>
-                                    <li class="border-start pe-3 ps-2 p-1"><a href="#"><i class="fa-solid fa-user m-2"></i>ورود / ثبت نام</a></li>
-                                    <li class="border-start p-1 pe-3"><a href="#"><i class="fa-solid fa-check m-2"></i>پیگیری سفارش</a></li>
-                                    <li class="border-start border-end p-1 pe-3 "><a href="#"><i class="fa-solid fa-phone m-2"></i>091200000</a></li>
-                                    <li class="hidden"><a href="#"><i class="fa-solid fa-magnifying-glass m-2"></i></a></li>
-                                    <li><input type="search" name="جستجو" placeholder="جستجو" class="hidden" style="width: 70px; margin: 0; padding: 0; border: none; outline: none;">
-                                    </form></li>
-                                    <li class="border-start border-end hidden float-end mmhover p-1"><abbr data-bs-toggle="tooltip" data-bs-placement="bottom" title="twitter"><a href="#"><i class="fa-brands fa-twitter p-2 zc"></i></a></li></abbr>
-                                    <li class="border-start hidden float-end mmhover p-1"><abbr data-bs-toggle="tooltip" data-bs-placement="bottom" title="facebook"><a href="#"><i class="fa-brands fa-facebook p-2 zc"></i></a></li></abbr>
-                                    <li class="border-start hidden float-end mmhover p-1"><abbr data-bs-toggle="tooltip" data-bs-placement="bottom" title="google plus"><a href="#"><i class="fa-brands fa-google-plus-g p-2 zc"></i></a></li></abbr>
-                                    <li class="border-start hidden float-end mmhover p-1"><abbr data-bs-toggle="tooltip" data-bs-placement="bottom" title="instagram"><a href="#"><i class="fa-brands fa-instagram p-2 zc"></i></a></li></abbr>
-                                    <li class="border-start hidden float-end mmhover p-1"><abbr data-bs-toggle="tooltip" data-bs-placement="bottom" title="telegram"><a href="#"><i class="fa-brands fa-telegram p-2 zc"></i></a></li></abbr>
-                                    <li class="border-start hidden float-end mmhover p-1"><abbr data-bs-toggle="tooltip" data-bs-placement="bottom" title="aparat"><a href="#"><i class="fa-solid fa-clapperboard p-2 zc"></i></a></li></abbr>
-                                </ul>
-                            </div>
+        <div class="mhead">
+            <!-- sell -->
+            <div class="row">
+                <div class="sell bnm"></div>
+            </div>
+            <!-- menu 1 -->
+            <div class="border-bottom">
+                <div class="container">
+                    <div class="row fvg">
+                        <div class="col-12">
+                            <ul class="">
+                                <li class="border-start p-1"><a class="ps-2" href="#"><i class="fa-solid fa-house m-2"></i></a></li>
+                                <li class="border-start p-1"><a class="ps-2" href="#"><i class="fa-solid fa-cart-shopping m-2"></i>سبد خرید</a></li>
+                                <li class="border-start pe-3 ps-2 p-1"><a href="#"><i class="fa-solid fa-user m-2"></i>ورود / ثبت نام</a></li>
+                                <li class="border-start p-1 pe-3"><a href="#"><i class="fa-solid fa-check m-2"></i>پیگیری سفارش</a></li>
+                                <li class="border-start border-end p-1 pe-3 "><a href="#"><i class="fa-solid fa-phone m-2"></i>091200000</a></li>
+                                <li class="hidden"><a href="#"><i class="fa-solid fa-magnifying-glass m-2"></i></a></li>
+                                <li><input type="search" name="جستجو" placeholder="جستجو" class="hidden" style="width: 70px; margin: 0; padding: 0; border: none; outline: none;">
+                                </form></li>
+                                <li class="border-start border-end hidden float-end mmhover p-1"><abbr data-bs-toggle="tooltip" data-bs-placement="bottom" title="twitter"><a href="#"><i class="fa-brands fa-twitter p-2 zc"></i></a></li></abbr>
+                                <li class="border-start hidden float-end mmhover p-1"><abbr data-bs-toggle="tooltip" data-bs-placement="bottom" title="facebook"><a href="#"><i class="fa-brands fa-facebook p-2 zc"></i></a></li></abbr>
+                                <li class="border-start hidden float-end mmhover p-1"><abbr data-bs-toggle="tooltip" data-bs-placement="bottom" title="google plus"><a href="#"><i class="fa-brands fa-google-plus-g p-2 zc"></i></a></li></abbr>
+                                <li class="border-start hidden float-end mmhover p-1"><abbr data-bs-toggle="tooltip" data-bs-placement="bottom" title="instagram"><a href="#"><i class="fa-brands fa-instagram p-2 zc"></i></a></li></abbr>
+                                <li class="border-start hidden float-end mmhover p-1"><abbr data-bs-toggle="tooltip" data-bs-placement="bottom" title="telegram"><a href="#"><i class="fa-brands fa-telegram p-2 zc"></i></a></li></abbr>
+                                <li class="border-start hidden float-end mmhover p-1"><abbr data-bs-toggle="tooltip" data-bs-placement="bottom" title="aparat"><a href="#"><i class="fa-solid fa-clapperboard p-2 zc"></i></a></li></abbr>
+                            </ul>
                         </div>
                     </div>
                 </div>
+            </div>
                     <!-- hamborger -->
                     <div class="border-bottom" style="background-color: #f8f9fa;">
                     <div class="row">
@@ -52,7 +52,6 @@
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
-                        <h2>start</h2>
                     <div class="bnv">
                     <a class="navbar-brand" href="#">
                         <img class="left" src="pic/logo.png" alt="Bootstrap" width="120" height="35">
@@ -132,9 +131,6 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-
-
-    
     <div class="container mt-3 mb-3 p-1">
         <div class="row zb">
             <div class="col-12 col-lg-3 border shadow pt-2 zv">
@@ -169,78 +165,35 @@
             </div> -->
         </div>
     </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-3 border m-1"><a href="#">
-                    <i class="fa-solid fa-truck"></i>
-                    <p>ارسال رایگان سفارش های بالا</p>
-                </a></div>
-                <div class="col-3 border m-1"><a href="#">
-                    <i class="fa-solid fa-calendar-days"></i>
-                    <p>ضمانت تعویض 10 روز سفارش</p>
-                </a></div>
-                <div class="col-3 border m-1"><a href="#">
-                    <i class="fa-solid fa-gift"></i>
-                    <p>مطابقت محصول با سایت</p>
-                </a></div>
-                <div class="col-3 border m-1"><a href="#">
-                    <i class="fa-solid fa-bag-shopping"></i>
-                    <p>کالای خود را بفروشید</p>
-                </a></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <img style="width: 100%;" src="pic/shoes.jpg" alt="">
+            </div>
+            <div class="col-4">
+                <img style="width: 100%;" src="pic/shoes.jpg" alt="">
+            </div>
+            <div class="col-4">
+                <img style="width: 100%;" src="pic/shoes.jpg" alt="">
             </div>
         </div>
-        <div class="poi pb-5 bg-body-tertiary border border-right-0">
-            <div class="container mt-5">
-                <div class="row">
-                    <div class="col-4">
-                        <div class="box">
-                            <img src="pic/shoes.jpg" alt="">
-                            <div class="light"></div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="box">
-                            <img src="pic/videoShoes.jpg" alt="">
-                            <div class="light"></div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="box">
-                            <img src="pic/_CampShix1301596521.jpg" alt="">
-                            <div class="light"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-4">
-                        <div class="box">
-                            <img src="pic/1401-10-07-14-09-58.jpg" alt="">
-                            <div class="light"></div>
-                        </div>
-                    </div>
-                    <div class="col-8">
-                        <div class="box">
-                            <img src="pic/1401-10-07-14-10-07.jpg" alt="">
-                            <div class="light"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-8">
-                        <div class="box">
-                            <img src="pic/1401-10-07-14-10-07.jpg" alt="">
-                            <div class="light"></div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="box">
-                            <img src="pic/1401-10-07-14-09-58.jpg" alt="">
-                            <div class="light"></div>
-                        </div>  
-                    </div>
-                </div>
+        <div class="row mt-3">
+            <div class="col-4">
+                <img style="width: 100%;" src="pic/1401-10-07-14-09-58.jpg" alt="">
+            </div>
+            <div class="col-8">
+                <img style="width: 100%;" src="pic/1401-10-07-14-10-07.jpg" alt="">
             </div>
         </div>
+        <div class="row mt-3">
+            <div class="col-8">
+                <img style="width: 100%;" src="pic/1401-10-07-14-10-07.jpg" alt="">
+            </div>
+            <div class="col-4">
+                <img style="width: 100%;" src="pic/1401-10-07-14-09-58.jpg" alt="">
+            </div>
+        </div>
+    </div>    
         <div class="container">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nisi repudiandae neque atque, unde quisquam pariatur doloremque sed nobis animi ipsam nulla iure tempora architecto officiis. Unde harum vel ex?</p>
         </div>
