--- a/shixon.html
+++ b/shixon.html
@@ -165,7 +165,7 @@
             </div> -->
         </div>
     </div>
-    <div class="container">
+    <div class="container mt-5 mb-5">
         <div class="row">
             <div class="col-4">
                 <img style="width: 100%;" src="pic/shoes.jpg" alt="">
@@ -177,12 +177,12 @@
                 <img style="width: 100%;" src="pic/shoes.jpg" alt="">
             </div>
         </div>
-        <div class="row mt-3">
+        <div class="row mt-3 mb-0">
             <div class="col-4">
-                <img style="width: 100%;" src="pic/1401-10-07-14-09-58.jpg" alt="">
+                <img style="width: 100%; height: 100%;" src="pic/1401-10-07-14-09-58.jpg" alt="">
             </div>
             <div class="col-8">
-                <img style="width: 100%;" src="pic/1401-10-07-14-10-07.jpg" alt="">
+                <img style="width: 100%; height: 100%;" src="pic/1401-10-07-14-10-07.jpg" alt="">
             </div>
         </div>
         <div class="row mt-3">
@@ -190,7 +190,7 @@
                 <img style="width: 100%;" src="pic/1401-10-07-14-10-07.jpg" alt="">
             </div>
             <div class="col-4">
-                <img style="width: 100%;" src="pic/1401-10-07-14-09-58.jpg" alt="">
+                <img style="width: 100%; height: 100%;" src="pic/1401-10-07-14-09-58.jpg" alt="">
             </div>
         </div>
     </div>    
