--- a/shixon.html
+++ b/shixon.html
@@ -19,9 +19,9 @@
                         <div class="sell bnm"></div>
                     </div>
                     <!-- menu 1 -->
-                    <div class="border-bottom">
+                    <div class="border-bottom d-flex justify-content-center">
                     <div class="container">
-                        <div class="row fvg">
+                        <div class="row fvg d-flex justify-content-center">
                             <div class="col-12">
                                 <ul class="">
                                     <li class="border-start p-1"><a class="ps-2" href="#"><i class="fa-solid fa-house m-2"></i></a></li>
