--- a/shixon.html
+++ b/shixon.html
@@ -133,29 +133,37 @@
           </div>
     <div class="container mt-3 mb-3 p-1">
         <div class="row zb">
-            <div class="col-12 col-lg-3 border shadow pt-2 zv">
-                <a href="#">
-                    <i class="fa-solid fa-truck"></i>
-                    <p>ارسال رایگان سفارش های بالا</p>
-                </a>
+            <div class="col-12 col-lg-3">
+                <div class="as border shadow pt-2 zv">
+                    <a href="#">
+                        <i class="fa-solid fa-truck"></i>
+                        <p>ارسال رایگان سفارش های بالا</p>
+                    </a>
+                </div>
             </div>
-            <div class="col-12 col-lg-3 border shadow pt-2 ps-2 pe-2 zv">
-                <a href="#">
-                    <i class="fa-solid fa-calendar-days"></i>
-                    <p>ضمانت تعویض 10 روز سفارش</p>
-                </a>
+            <div class="col-12 col-lg-3">
+                <div class="as border shadow pt-2 zv">
+                    <a href="#">
+                        <i class="fa-solid fa-calendar-days"></i>
+                        <p>ضمانت تعویض 10 روز سفارش</p>
+                    </a>
+                </div>
             </div>
-            <div class="col-12 col-lg-3 border shadow pt-2 zv">
-                <a href="#">
-                    <i class="fa-solid fa-gift"></i>
-                    <p>مطابقت محصول با سایت</p>
-                </a>
+            <div class="col-12 col-lg-3">
+                <div class="as border shadow pt-2 zv">
+                    <a href="#">
+                        <i class="fa-solid fa-gift"></i>
+                        <p>مطابقت محصول با سایت</p>
+                    </a>
+                </div>
             </div>
-            <div class="col-12 col-lg-3 border shadow pt-2 zv">
-                <a href="#">
-                    <i class="fa-solid fa-bag-shopping"></i>
-                    <p>کالای خود را بفروشید</p>
-                </a>
+            <div class="col-12 col-lg-3">
+                <div class="as border shadow pt-2 zv">
+                    <a href="#">
+                        <i class="fa-solid fa-bag-shopping"></i>
+                        <p>کالای خود را بفروشید</p>
+                    </a>
+                </div>
             </div>
             <!-- <div class="col-12 col-lg-2 border shadow pt-2 zv">
                 <a href="#">
@@ -167,30 +175,50 @@
     </div>
     <div class="container mt-5 mb-5">
         <div class="row">
-            <div class="col-4">
-                <img style="width: 100%;" src="pic/shoes.jpg" alt="">
+            <div class="col-4 last">
+                    <div style="height: 100%;" class="box">
+                        <img style="width: 100%; height: 100%;" src="pic/1401-10-07-14-09-58.jpg" alt="">
+                        <div class="light"></div>
+                    </div>
             </div>
             <div class="col-4">
-                <img style="width: 100%;" src="pic/shoes.jpg" alt="">
+                    <img style="width: 100%; height: 100%;" src="pic/videoShoes.jpg" alt="">
             </div>
             <div class="col-4">
-                <img style="width: 100%;" src="pic/shoes.jpg" alt="">
+                <div class="box">
+                    <img style="width: 100%; height: 100%;" src="pic/_CampShix1301596521.jpg" alt="">
+                    <div class="light"></div>
+                </div>
             </div>
         </div>
         <div class="row mt-3 mb-0">
             <div class="col-4">
-                <img style="width: 100%; height: 100%;" src="pic/1401-10-07-14-09-58.jpg" alt="">
+                <div class="box">
+                    <img style="width: 100%; height: 100%;" src="pic/1401-10-07-14-09-58.jpg" alt="">
+                    <div class="light"></div>
+                </div>
+                
             </div>
             <div class="col-8">
-                <img style="width: 100%; height: 100%;" src="pic/1401-10-07-14-10-07.jpg" alt="">
+                <div class="box">
+                    <img style="width: 100%; height: 100%;" src="pic/1401-10-07-14-10-07.jpg" alt="">
+                    <div class="light"></div>
+                </div>
             </div>
         </div>
-        <div class="row mt-3">
+        <div class="row mt-3 mb-0">
             <div class="col-8">
-                <img style="width: 100%;" src="pic/1401-10-07-14-10-07.jpg" alt="">
-            </div>
+                <div class="box">
+                    <img style="width: 100%; height: 100%;" src="pic/1401-10-07-14-10-07.jpg" alt="">
+                    <div class="light"></div>
+                </div>
+            </div> 
             <div class="col-4">
-                <img style="width: 100%; height: 100%;" src="pic/1401-10-07-14-09-58.jpg" alt="">
+                <div class="box">
+                    <img style="width: 100%; height: 100%;" src="pic/1401-10-07-14-09-58.jpg" alt="">
+                    <div class="light"></div>
+                </div>
+                
             </div>
         </div>
     </div>    
