--- a/shixon.html
+++ b/shixon.html
@@ -173,7 +173,8 @@
             </div> -->
         </div>
     </div>
-    <div class="container mt-5 mb-5">
+    <div class="bg-body-tertiary p-3 border-top border-bottom">
+    <div class="container mt-5 mb-5 bg">
         <div class="row">
             <div class="col-4 last">
                     <div style="height: 100%;" class="box">
@@ -182,7 +183,9 @@
                     </div>
             </div>
             <div class="col-4">
+                <div class="box">
                     <img style="width: 100%; height: 100%;" src="pic/videoShoes.jpg" alt="">
+                </div>
             </div>
             <div class="col-4">
                 <div class="box">
@@ -221,6 +224,7 @@
                 
             </div>
         </div>
+    </div>
     </div>    
         <div class="container">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nisi repudiandae neque atque, unde quisquam pariatur doloremque sed nobis animi ipsam nulla iure tempora architecto officiis. Unde harum vel ex?</p>
