--- a/shixon.html
+++ b/shixon.html
@@ -178,7 +178,7 @@
         <div class="row">
             <div class="col-4 last">
                     <div style="height: 100%;" class="box">
-                        <img style="width: 100%; height: 100%;" src="pic/1401-10-07-14-09-58.jpg" alt="">
+                        <img style="width: 100%; height: 100%;" src="pic/shoes.jpg" alt="">
                         <div class="light"></div>
                     </div>
             </div>
