--- a/shixon.html
+++ b/shixon.html
@@ -232,7 +232,7 @@
                     <img src="pic/OneSize140023.jpg" alt="">
                 </div>
                 <div class="col-10">
-                    <div class="row">
+                    <div class="row m-2">
                         <div class="col-2">
                             <div class="product p-2 bg-white">
                                 <div class="mki">
