--- a/shixon.html
+++ b/shixon.html
@@ -236,7 +236,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-2 col-lg-2 mt-3">
-                        <img src="pic/OneSize140023.jpg" alt="">
+                        <img style="width: 100%;" src="pic/OneSize140023.jpg" alt="">
                     </div>
                     <div class="col-10">
                         <div class="row m-2">
