--- a/shixon.html
+++ b/shixon.html
@@ -1142,6 +1142,7 @@
         <div class="lqe">
             <p>کپی رایت پاورقی</p>
         </div>
+    </footer>
     <!-- -----------------------------------------  ------------------------------------------- -->
       <script src="js/bootstrap.bundle.min.js"></script>
       <script>
