--- a/shixon.html
+++ b/shixon.html
@@ -1143,6 +1143,14 @@
             <p>کپی رایت پاورقی</p>
         </div>
     </footer>
+    <!-- ----------------------------------------- ارتباط با پشتیبانی ------------------------------------------- -->
+    <div class="conus">
+        <div>
+            <a href="#">
+                <h5>ارتباط با پشتیبانی</h5>
+            </a>
+        </div>
+    </div>
     <!-- -----------------------------------------  ------------------------------------------- -->
       <script src="js/bootstrap.bundle.min.js"></script>
       <script>
