--- a/shixon.html
+++ b/shixon.html
@@ -14,11 +14,11 @@
 <body>
     <div class="container-fluid z-3 position-absolute" style="background-color: #f8f9fa; width: 100%;">    
         <div class="mhead">
-            <!-- sell -->
+    <!-- ---------------------------------------- sell ------------------------------------------------- -->
             <div class="row">
                 <div class="sell bnm"></div>
             </div>
-            <!-- menu 1 -->
+    <!-- ---------------------------------------- menu 1 ----------------------------------------------- -->
             <div class="border-bottom">
                 <div class="container">
                     <div class="row fvg">
@@ -43,7 +43,7 @@
                     </div>
                 </div>
             </div>
-                    <!-- hamborger -->
+    <!-- --------------------------------------- hamborger --------------------------------------------- -->
                     <div class="border-bottom" style="background-color: #f8f9fa;">
                     <div class="row">
                         <div class="col">
@@ -107,7 +107,7 @@
                 </div>
                 </div>
             </div>
-    <!-- slider -->
+    <!-- ----------------------------------------- slider --------------------------------------------- -->
     <div class="zx"></div>
         <div id="carouselExampleIndicators" class="carousel slide z-0 " data-bs-ride="carousel" style="width: 100%;">
             <div class="carousel-indicators">
@@ -131,7 +131,7 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-    <!-- ------------------------------------------------------------------------------------- -->
+    <!-- ---------------------------------------------------------------------------------------------- -->
     <div class="container mt-3 mb-3 p-1">
         <div class="row zb">
             <div class="col-12 col-lg-3">
