--- a/shixon.html
+++ b/shixon.html
@@ -131,7 +131,7 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-    <!-- ---------------------------------------------------------------------------------------------- -->
+    <!-- ---------------------------------------- ارسال محصول ------------------------------------------ -->
     <div class="container mt-3 mb-3 p-1">
         <div class="row zb">
             <div class="col-12 col-lg-3">
@@ -231,7 +231,7 @@
     <!-- ------------------------------------------ تک سایز ------------------------------------------ -->  
         <div class="pt-3 pb-5" style="background-color: #e7d9ea;">
             <h3 class="cvbr">
-                <span>تک سایز</span>
+                <span class="uybh">تک سایز</span>
             </h3>
             <div class="container">
                 <div class="row">
@@ -239,7 +239,7 @@
                         <img style="width: 100%;" src="pic/OneSize140023.jpg" alt="">
                     </div>
                     <div class="col-10">
-                        <div class="row m-2">
+                        <div class="row">
                             <div class="col-5 col-lg-3">
                                 <div class="product p-2 bg-white mt-3">
                                     <a href="">
@@ -354,7 +354,7 @@
     <!-- ---------------------------------------- جدیدترین ها ---------------------------------------- -->  
     <div class="pt-3 pb-5 border-bottom" style="background-color: #fdf9ff;">
         <h3 class="cvbr">
-            <span>
+            <span class="uybh">
                 جدیدترین ها
             </span>
         </h3>
@@ -560,9 +560,8 @@
     <!-- ------------------------------------ محبوب‌ترین‌های ماه اخیر --------------------------------- -->  
     <div class="pt-3 pb-5 border-bottom border-top mt-5" style="background-color: #fdf9ff;">
         <h3 class="cvbr">
-            <span>
+            <span class="uybh">
                 محبوب‌ ترین‌های ماه اخیر
-
             </span>
         </h3>
         <div class="container">
@@ -808,7 +807,7 @@
     <!-- ---------------------------------------- زیر قیمت‌ بازار ------------------------------------- -->
     <div class="pt-3 pb-5 border-bottom border-top mt-5" style="background-color: #fdf9ff;">
         <h3 class="cvbr">
-            <span>
+            <span class="uybh">
                 زیر قیمت‌ بازار
             </span>
         </h3>
@@ -1054,7 +1053,7 @@
     <!-- ------------------------------------- فروشگاه اینترنتی شیکسون ------------------------------ -->
     <div class="pt-3 pb-0 border-top mt-5 mb-0" style="background-color: #fdf9ff;">
         <h3 class="cvbr">
-            <span>
+            <span class="">
                 فروشگاه اینترنتی شیکسون
             </span>
         </h3>
