--- a/shixon.html
+++ b/shixon.html
@@ -1053,7 +1053,7 @@
     <!-- ------------------------------------- فروشگاه اینترنتی شیکسون ------------------------------ -->
     <div class="pt-3 pb-0 border-top mt-5 mb-0" style="background-color: #fdf9ff;">
         <h3 class="cvbr">
-            <span class="">
+            <span class="uybh">
                 فروشگاه اینترنتی شیکسون
             </span>
         </h3>
